fix target tests